--- a/Frontend/portfolio/src/index.css
+++ b/Frontend/portfolio/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+* {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+@layer components {
+  .menu-wrapper {
+    @apply md:flex flex-col items-center md:flex-row gap-4 md:gap-8 text-sm font-medium absolute md:static top-40
+           left-0 w-full md:w-auto bg-white/45 md:bg-transparent rounded-lg md:rounded-none shadow-md md:shadow-none
+           p-4 md:p-0 z-50 border border-blue-600 md:border-none backdrop-blur-[30.90px] text-blue-800;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  .menu-item {
+  @apply relative 
+         before:content-[''] before:absolute before:w-0 before:h-[3px] 
+         before:bg-gradient-to-r before:from-blue-500 before:to-blue-300 
+         before:rounded-full before:-bottom-1 before:left-0 
+         before:transition-all before:duration-300 
+         hover:before:w-full cursor-pointer;
 }
+
+.action-btn-outline{
+  @apply h-10 md:h-12 text-sm md:text-[14px] font-medium text-blue-700 px-4 lg:px-10 rounded-[71px] border-2 border-blue-700
+}
+.action-btn{
+  @apply h-10 md:h-12 text-xs md:text-[14px] font-medium text-white bg-blue-700 px-4 lg:px-10 rounded-[71px]
+}
+.btn-scale-anim{
+  @apply transition-transform duration-300 ease-in-out transform hover:scale-105 hover:shadow-lg;
+}
+.profile-pic{
+  @apply  transition-transform duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl hover:rotate-[3deg];
+}
+.icon-img{
+  @apply w-12 md:w-16 h-12 md:h-16 absolute transition-transform duration-300 ease-in-out hover:rotate-0;
+}
+/* .matti{
+  @apply top-8
+} */
+
+.copy-grad {
+  background: #9CECFB;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #0052D4, #65C7F7, #9CECFB);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #0052D4, #65C7F7, #9CECFB); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+
+
+/* 
+*{
+  font-family: 'Akira Expanded', sans-serif;
+} */
