--- a/Frontend/portfolio/src/index.css
+++ b/Frontend/portfolio/src/index.css
@@ -46,6 +46,9 @@
 .section-title{
   @apply text-[30px] font-semibold text-center bg-gradient-to-r from-[#0052D4] via-[#65C7F7] to-[#9CECFB] bg-clip-text text-transparent
 }
+.profile-pic-about{
+  @apply  transition-transform duration-300 ease-in-out transform hover:scale-105 hover:shadow-xl hover:rotate-[3deg];  
+}
 
 
 
